@@ -331,15 +331,15 @@ function smarty_modifier_i18n($string)
  *  </code>
  *  <code>
  *  <input type="checkbox" name="test">
- *  <input type="checkbox" name="test" checkbox>
+ *  <input type="checkbox" name="test" checked>
  *  </code>
  *
- *  @param  string  $string チェックボックスに渡されたフォーム値
- *  @return string  $stringが空文字列あるいは0以外の場合は"checked"
+ *  @param  string  $string チェックボックスに渡されたフォーム値(スカラーのみ)
+ *  @return string  $stringが空文字列あるいは0, null, false 以外の場合は"checked"
  */
 function smarty_modifier_checkbox($string)
 {
-    if ($string != "" && $string != 0) {
+    if (is_scalar($string) && $string != "" && $string != "0") {
         return "checked";
     }
 }
